cleanup and improvements